@@ -3,19 +3,19 @@ package com.example.newslistservice.service;
 import com.example.newslistservice.S3.S3Service;
 import com.example.newslistservice.client.FileClient;
 import com.example.newslistservice.domain.News;
+import com.example.newslistservice.dto.CreateNewsRequestDTO;
 import com.example.newslistservice.dto.DetailNewsDTO;
 import com.example.newslistservice.dto.NewsDetailDTO;
 import com.example.newslistservice.mapper.NewsMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 @Service
 @RequiredArgsConstructor
@@ -35,12 +35,11 @@ public class NewsService {
 
     // 뉴스 생성 메서드
     @Transactional
-    public News createNews(News news) throws IOException {
-        if (news.getImg() != null && !news.getImg().isEmpty()) {
-            List<String> str = Arrays.asList(news.getImg().split(";"));
-            System.out.println("이미지는 ::" + str);
+    public CreateNewsRequestDTO createNews(CreateNewsRequestDTO news, List<MultipartFile> images) throws IOException {
+        if (images != null) {
+            System.out.println("이미지는 ::" + images);
             StringBuilder s3Urls = new StringBuilder();
-            for (String file : str) {
+            for (MultipartFile file : images) {
                 String s3Url = s3Service.uploadFile(file);
                 if (s3Urls.length()>0){
                     s3Urls.append(";");
@@ -60,12 +59,11 @@ public class NewsService {
     }
 
     @Transactional
-    public void updateNews(News news) throws IOException {
-        if (news.getImg() != null && !news.getImg().isEmpty()) {
-            List<String> str = Arrays.asList(news.getImg().split(";"));
-            System.out.println("이미지는 ::" + str);
+    public CreateNewsRequestDTO updateNews(CreateNewsRequestDTO news, List<MultipartFile> images) throws IOException {
+        if (images != null) {
+            System.out.println("이미지는 ::" + images);
             StringBuilder s3Urls = new StringBuilder();
-            for (String file : str) {
+            for (MultipartFile file : images) {
                 String s3Url = s3Service.uploadFile(file);
                 if (s3Urls.length()>0){
                     s3Urls.append(";");
@@ -75,8 +73,13 @@ public class NewsService {
             }
             news.setImg(s3Urls.toString());
         }
-        newsMapper.updateNews(news);// Mapper 호출
-
+        // Mapper 호출하여 DB에 저장
+        int result = newsMapper.updateNews(news);
+        if (result > 0) {
+            return news;
+        } else {
+            throw new RuntimeException("Failed to insert news");
+        }
     }
 
 
@@ -92,27 +95,31 @@ public class NewsService {
         DetailNewsDTO newsList = newsMapper.selectNewsById(id);
 
         // 2. 이미지 경로 추출
-//        List<String> imgPaths = newsList.stream()
-//                .map(DetailNewsDTO::getImg)
-//                .collect(Collectors.toList());
-
-        String[] arr = newsList.getImg().split(";");
-        List<String> imgPaths = Arrays.asList(arr);
-        List<String> imgList = List.of();
-        if (!imgPaths.getFirst().isEmpty()) {
-            imgList = fileClient.getImg(imgPaths);
-            System.out.println("이미지 리스트는 :: "+imgList);
+        List<String> imgPaths = null;
+        if (newsList.getImg() != null) { // null이면 그대로 둠
+            if (!newsList.getImg().isEmpty()) { // 빈 문자열일 때만 처리
+                imgPaths = Arrays.asList(newsList.getImg().split(";"));
+            } else {
+                imgPaths = List.of(); // 빈 문자열이면 빈 리스트로 설정
+            }
         }
-        // 3. FeignClient를 사용해 이미지 정보 가져오기
 
-        // Products와 인코딩된 이미지를 매칭하여 DTO 리스트를 생성
+        List<String> imgList = null;
 
+        // 3. 이미지 리스트가 존재하고 첫 번째 값이 비어있지 않을 때만 API 호출
+        if (imgPaths != null && !imgPaths.isEmpty() && !imgPaths.get(0).isEmpty()) {
+            imgList = fileClient.getImg(imgPaths);
+            System.out.println("이미지 리스트는 :: " + imgList);
+        }
+
+        // 4. DTO 반환 (img가 null이면 null 그대로 유지)
         return NewsDetailDTO.builder()
                 .title(newsList.getTitle())
                 .content(newsList.getContent())
-                .img(imgList)
+                .img(imgList) // imgList도 null이면 그대로 전달
                 .build();
     }
+
 
 
     public void removeNews(List<Long> ids) {
